--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ select {
 .conteiner {
    background-image: url(img/1647335674_5-abrakadabra-fun-p-serii-fon-bez-nichego-5.jpg);
    width: 100%;
-   height: 1300px;
+   height: 1500px;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -130,9 +130,17 @@ select {
    width: 40%;
 }
 .main_photo {
-   border: 1px solid black;
+   background-image: url(img/object1604725775.png);
+   background-size: 100% 100%;
    height: 100%;
    width: 100%;
+   display: flex;
+   align-items: center;
+}
+.left_main_slide {
+   width: 45%;
+   height: 70%;
+   border: 1px solid white;
 }
 .left_text {
    font-size: 25px;
@@ -148,12 +156,77 @@ select {
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
-   border: 1px solid black;
+   border: 1px solid rgb(177, 177, 177);
    width: 55.5%;
    height: 55%;
 }
 .category {
-   width: 90%;
-   height: 20%;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   width: 95%;
+   height: 30%;
+}
+.our_proj {
+   display: flex;
+   align-items: center;
+   width: 95%;
+   height: 5%;
+   background-color: #365F91;
+}
+.map {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 95%;
+   height: 60%;
+   border: 3px double rgb(177, 177, 177);
+}
+.footer {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: 4%;
+   background-color: #365F91;
+}
+.bar {
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   width: 20%;
+   height: 95%;
+}
+.main_text {
+   width: 80%;
+   height: 95%;
+}
+.click {
+   margin-top: 5px;
+   display: flex;
+   align-items: center;
+   color: white;
+   background-color: #365F91;
+   width: 95%;
+   height: 15%;
+}
+#click {
+   margin-top: 5px;
+   display: flex;
+   align-items: center;
+   width: 95%;
+   height: 15%;
+   border: 3px double rgb(177, 177, 177);
+}
+.bottom_bar {
+   margin-left: 20px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   width: 95%;
+   height: 25%;
    border: 1px solid black;
+}
+.fotter_bar {
+   width: 33%;
 }
