--- a/style.css
+++ b/style.css
@@ -120,10 +120,12 @@ select {
 }
 .left_icon {
    background-color: rgb(0, 121, 219);
-   height: 50%;
+   height: 42%;
    width: 40%;
    display: flex;
    align-items: center;
+   justify-content: center;
+   flex-direction: row-reverse;
 }
 .right_icon {
    height: 50%;
@@ -137,18 +139,12 @@ select {
    display: flex;
    align-items: center;
 }
-.left_main_slide {
-   width: 45%;
-   height: 70%;
-   border: 1px solid white;
-}
 .left_text {
    font-size: 25px;
-   display: flex;
-   justify-content: center;
    height: 100%;
    width: 100%;
    writing-mode: vertical-rl;
+   font-weight: bold;
    color: white;
 }
 .contacts_block {
@@ -173,13 +169,14 @@ select {
    width: 95%;
    height: 5%;
    background-color: #365F91;
+   margin-top: 130px;
 }
 .map {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 95%;
-   height: 60%;
+   height: 41%;
    border: 3px double rgb(177, 177, 177);
 }
 .footer {
@@ -217,16 +214,61 @@ select {
    width: 95%;
    height: 15%;
    border: 3px double rgb(177, 177, 177);
+   transition: 0.3s ease;
+}
+#click:hover {
+   background-color: #365F91;
+}
+#click:hover .tt {
+   color: white;
+}
+.tt {
+   margin-left: 10px;
+   color: #365F91;
+   text-decoration: none;
+   transition: 0.3s ease;
+}
+.tt:hover {
+   color: white;
 }
 .bottom_bar {
+   margin-top: 30px;
    margin-left: 20px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 95%;
    height: 25%;
-   border: 1px solid black;
 }
 .fotter_bar {
    width: 33%;
+}
+.slider {
+   width: 45%;
+   height: 55%;
+   overflow: hidden;
+}
+.slider_line {
+   display: flex;
+   flex-direction: column;
+   position: relative;
+   transition: 0.5s ease;
+   left: 0;
+   top: 0;
+}
+.slider_photo {
+   width: 100%;
+   height: 247.5px;
+}
+.next, .prev {
+   border: none;
+   width: 30px;
+   height: 30px;
+   margin-right: 5px;
+   border-radius: 100%;
+   transition: 0.3s ease;
+}
+.next:hover, .prev:hover {
+   background-color: #365F91;
+   color: white;
 }
