--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ select {
    flex-direction: column;
 }
 .search {
-   background-color: #365F91;
+   background: linear-gradient(#4478b8, #294a72);
    width: 100%;
    height: 3%;
    display: flex;
@@ -168,8 +168,8 @@ select {
    align-items: center;
    width: 95%;
    height: 5%;
-   background-color: #365F91;
-   margin-top: 130px;
+   background: linear-gradient(#4478b8, #294a72);
+   margin-top: 70px;
 }
 .map {
    display: flex;
@@ -185,7 +185,7 @@ select {
    align-items: center;
    width: 100%;
    height: 4%;
-   background-color: #365F91;
+   background: linear-gradient(#4478b8, #294a72);
 }
 .bar {
    display: flex;
@@ -203,7 +203,7 @@ select {
    display: flex;
    align-items: center;
    color: white;
-   background-color: #365F91;
+   background: linear-gradient(#4478b8, #294a72);
    width: 95%;
    height: 15%;
 }
@@ -271,4 +271,18 @@ select {
 .next:hover, .prev:hover {
    background-color: #365F91;
    color: white;
+}
+.information {
+   margin-top: 50px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+   border: 1px solid black;
+   width: 80%;
+   height: 100%;
+}
+.table {
+   display: flex;
+   flex-direction: column;
 }
