--- a/style.css
+++ b/style.css
@@ -169,14 +169,13 @@ select {
    width: 95%;
    height: 5%;
    background: linear-gradient(#4478b8, #294a72);
-   margin-top: 70px;
 }
 .map {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 95%;
-   height: 41%;
+   height: 80%;
    border: 3px double rgb(177, 177, 177);
 }
 .footer {
@@ -232,7 +231,6 @@ select {
    color: white;
 }
 .bottom_bar {
-   margin-top: 30px;
    margin-left: 20px;
    display: flex;
    flex-direction: row;
@@ -273,16 +271,31 @@ select {
    color: white;
 }
 .information {
-   margin-top: 50px;
    display: flex;
-   flex-direction: row;
-   justify-content: space-around;
    align-items: center;
-   border: 1px solid black;
+   justify-content: center;
    width: 80%;
    height: 100%;
 }
 .table {
    display: flex;
    flex-direction: column;
+}
+.information_blocks {
+   width: 100%;
+   height: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+}
+.info_block {
+   font-size: 15px;
+   display: flex;
+   justify-content: center;
+   width: 100%;
+   height: 100%;
+}
+.content_block {
+   display: flex;
+   align-items: center;
 }
